--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,13 @@
 		"esModuleInterop": true,
 		"noImplicitAny": true,
 		"sourceMap": true,
-		"baseUrl": ".",
+		"baseUrl": "./src",
 		"outDir": "dist",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"paths": {
 			"*": [
+				"*",
 				"node_modules/*"
 			]
 		},
