--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@electron-forge/maker-squirrel": "^6.0.4",
 		"@electron-forge/maker-zip": "^6.0.4",
 		"@electron-forge/plugin-webpack": "^6.0.4",
+		"@types/lodash": "^4.14.191",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.9",
 		"@typescript-eslint/eslint-plugin": "^5.45.1",
@@ -35,6 +36,7 @@
 		"eslint": "^8.29.0",
 		"eslint-plugin-import": "^2.26.0",
 		"fork-ts-checker-webpack-plugin": "^7.2.13",
+		"lodash": "^4.17.21",
 		"node-loader": "^2.0.0",
 		"style-loader": "^3.3.1",
 		"ts-loader": "^9.4.2",
