--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"eslint-plugin-import": "^2.26.0",
 		"fork-ts-checker-webpack-plugin": "^7.2.13",
 		"lodash": "^4.17.21",
+		"moment": "^2.29.4",
 		"node-loader": "^2.0.0",
 		"style-loader": "^3.3.1",
 		"ts-loader": "^9.4.2",
