--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"electron": "22.0.0",
 		"electron-devtools-installer": "^3.2.0",
 		"eslint": "^8.29.0",
-		"eslint-plugin-import": "^2.26.0",
+		"eslint-import-resolver-typescript": "^3.5.3",
+		"eslint-plugin-import": "^2.27.4",
 		"fork-ts-checker-webpack-plugin": "^7.2.13",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.4",
